Add libman to restore UI lib on build

--- a/DotNet-Core/BankId.Merchant.Library.SampleWebsite/BankId.Merchant.Library.SampleWebsite.csproj
+++ b/DotNet-Core/BankId.Merchant.Library.SampleWebsite/BankId.Merchant.Library.SampleWebsite.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.AspNetCore.Server.IIS" Version="2.2.6" />
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.0.76" />
   </ItemGroup>
 
 
