Add final touches

--- a/DotNet/BankId.Merchant.Library.SampleWebsite/appsettings.Development.json
+++ b/DotNet/BankId.Merchant.Library.SampleWebsite/appsettings.Development.json
@@ -13,9 +13,9 @@
     "MerchantReturnUrl": "", //"http://example.com",
 
     "MerchantAcquirerId": "", //"42",
-    "AcquirerDirectoryUrl": "", //"http://bvn-idin-acquirer-dummy.azurewebsites.net/?id=DirectoryResponse-OK-1",
-    "AcquirerTransactionUrl": "", //"http://bvn-idin-acquirer-dummy.azurewebsites.net/?id=TransactionResponse-OK-1",
-    "AcquirerStatusUrl": "", //"http://bvn-idin-acquirer-dummy.azurewebsites.net/?id=StatusResponse-OK-1",
+    "AcquirerDirectoryUrl": "", //"https://my.bank.nl/dir"
+    "AcquirerTransactionUrl": "", //"https://my.bank.nl/trx"
+    "AcquirerStatusUrl": "", //"https://my.bank.nl/sts"
 
     "MerchantCertificateFingerprint": "", //"824e7fa642552aed15dde42b6f4df856d7622d21",
     "RoutingServiceCertificateFingerprint": "", //"037084cee001b2f8f658d822ee5ea0a076a184e9",
