--- a/DotNet/iDIN.Merchant.Library/BankId.Merchant.Library.csproj
+++ b/DotNet/iDIN.Merchant.Library/BankId.Merchant.Library.csproj
@@ -1,18 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <DocumentationFile>BankId.Merchant.Library.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <NoWarn>1701;1702;0114;0108</NoWarn>
-    <OutputPath>\bin\Debug\</OutputPath>
-    <DocumentationFile>\bin\Debug\netcoreapp2.2\BankId.Merchant.Library.xml</DocumentationFile>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>\bin\Release\netcoreapp2.2\BankId.Merchant.Library.xml</DocumentationFile>
-    <OutputPath>\bin\Release\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -38,9 +32,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
     <PackageReference Include="System.Security.Cryptography.Cng" Version="4.5.0" />
     <PackageReference Include="System.Security.Cryptography.X509Certificates" Version="4.3.2" />
