--- a/DotNet/BankId.Merchant.Library.SampleWebsite/BankId.Merchant.Library.SampleWebsite.csproj
+++ b/DotNet/BankId.Merchant.Library.SampleWebsite/BankId.Merchant.Library.SampleWebsite.csproj
@@ -1,32 +1,34 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
   </PropertyGroup>
-
   <ItemGroup>
+    <Content Remove="Views\Home\Index.cshtml" />
     <Content Remove="wwwroot\favicon.ico" />
   </ItemGroup>
-
+  <ItemGroup>
+    <EmbeddedResource Include="Views\Home\Index.cshtml" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="wwwroot\favicon.ico" />
   </ItemGroup>
-
-
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.AspNetCore.Server.IIS" Version="2.2.6" />
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.0.96" />
+    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.346202">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.10" />
+    <PackageReference Include="System.Runtime" Version="4.3.1" />
   </ItemGroup>
-
-
   <ItemGroup>
     <ProjectReference Include="..\iDIN.Merchant.Library\BankId.Merchant.Library.csproj" />
   </ItemGroup>
-
-
   <ItemGroup>
     <Content Update="appsettings.QA.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -39,5 +41,4 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-
 </Project>
