Update library to support net8 + update sample website

--- a/DotNet/BankId.Merchant.Library.SampleWebsite/appsettings.json
+++ b/DotNet/BankId.Merchant.Library.SampleWebsite/appsettings.json
@@ -4,6 +4,9 @@
       "Default": "Warning"
     }
   },
+  "AdvancedApplicationSettings": {
+    "AppLogsLocation": "" //"D:\\home\\site\\wwwroot\\logs"
+  },
   "AllowedHosts": "*",
 
   "iDIN.Merchant.Library.Settings": {
@@ -16,10 +19,10 @@
     "AcquirerTransactionUrl": "", //"https://my.bank.nl/trx"
     "AcquirerStatusUrl": "", //"https://my.bank.nl/sts"
 
-    "MerchantCertificateFingerprint": "", //"824e7fa642552aed15dde42b6f4df856d7622d21",
+    "MerchantCertificateFingerprint": "", //"b2def0477b941c66ca2c8cb50d70ecac0e71a668",
     "RoutingServiceCertificateFingerprint": "", //"037084cee001b2f8f658d822ee5ea0a076a184e9",
     "RoutingServiceAlternateCertificateFingerprint": "", //"",
-    "SAMLCertificateFingerprint": "", //"824e7fa642552aed15dde42b6f4df856d7622d21",
+    "SAMLCertificateFingerprint": "", //"b2def0477b941c66ca2c8cb50d70ecac0e71a668",
 
     "ServiceLogsEnabled": "", //"true",
     "ServiceLogsLocation": "", //"D:\\home\\site\\wwwroot\\ServiceLogs",
